add new test cases for DocumentStoreClient